# expolid-v2

./: .gitignore  DEVELOPMENT.md  HANDOFF.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: ai.py  auth.py  badge.py  config.py  database.py  db.py  deps.py  enrichment.py  events.py  main.py  models.py  push.py  routing.py  schemas.py  security.py  storage.py  telegram_bot.py
backend/app/ai/: summarize.py
backend/app/integrations/: amocrm.py  bitrix24.py  hubspot.py
backend/app/routers/: ai.py  auth.py  auth_routes.py  badge_routes.py  contacts.py  contacts_routes.py  dashboard.py  dashboard_routes.py  enrichment_routes.py  events_routes.py  exhibitions.py  exhibitions_routes.py  export_routes.py  exports.py  followups.py  followups_routes.py  integrations_routes.py  push.py  push_routes.py  qualification_routes.py  routing_routes.py  stream.py  tasks.py  tasks_routes.py  team.py  team_routes.py  telegram.py  telegram_routes.py  templates.py  uploads.py
backend/uploads/: vapid.json
docs/: README.md
frontend/: .env.example  .env.production  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.tsx  api.ts  index.css  main.tsx  sw.ts
frontend/src/api/: ai.ts  auth-storage.ts  auth.ts  client.ts  contacts.ts  dashboard.ts  exhibitions.ts  exports.ts  followups.ts  tasks.ts  team.ts  telegram.ts  templates.ts  uploads.ts
frontend/src/components/: FollowUpModal.tsx  FollowUpsSection.tsx  Layout.tsx  (+10 more)
(+33 files in other folders)
