[project]
name = "expolid-backend"
version = "0.1.0"
description = "ЭкспоЛид v2 — backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pydantic[email]>=2.6",
    "pydantic-settings>=2.2",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "python-multipart>=0.0.9",
    "alembic>=1.13",
    "openpyxl>=3.1",
    "pywebpush>=1.14",
    "py-vapid>=1.9",
    "cryptography>=41",
    "python-telegram-bot[job-queue]>=21",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
